--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/registro_tarefas
-spring.datasource.username=developer
-spring.datasource.password=developer
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/registro_tarefas?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
